@@ -33,10 +33,12 @@ bookmark.noMatching-2 = No bookmarks matching tags %S and string %S
 bookmark.noMatchingTags-1 = No bookmarks matching tags %S
 bookmark.noMatchingString-1 = No bookmarks matching string %S
 bookmark.none = No bookmarks set
+bookmark.bangOrID = Only one of ! or -id may be given
 bookmark.cantAdd-1 = Could not add bookmark %S
 bookmark.allDeleted = All bookmarks deleted
 bookmark.removed-1 = Removed bookmark: %S
 bookmark.added-1 = Added bookmark: %S
+bookmark.updated-1 = Updated bookmark: %S
 bookmark.deleted-1 = %S bookmark(s) deleted
 bookmark.prompt.deleteAll = This will delete all bookmarks. Would you like to continue? (yes/[no]):
 
