@@ -105,6 +105,7 @@
       - :style now supports regexp site-filters on Firefox 6+. [b7]
       - :qa closes only the current window, per Vim. [b7]
       - Added :background command. [b8]
+      - Added -id flag to :bmark command and changed updating semantics. [b8]
       - Added :exit command. [b7]
       - Added :dlclear command. [b7]
       - :extensions has been replaced with a more powerful :addons. [b6]
